Bug 100880 - Spell checker context menu does not come up anymore since some builds (right-click on red underlined words)
Summary: Spell checker context menu does not come up anymore since some builds (right-...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.1.4.2 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.1
Keywords: bibisected, regression
Depends on:
Blocks:
 
Reported: 2016-07-12 17:43 UTC by OfficeUser
Modified: 2016-10-25 18:40 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Issue.ods (7.42 KB, application/x-vnd.oasis.opendocument.spreadsheet)
2016-07-12 17:43 UTC, OfficeUser
Details

Note You need to log in before you can comment on or make changes to this bug.
Description OfficeUser 2016-07-12 17:43:20 UTC
Created attachment 126185 [details]
Issue.ods

Since some builds (I don't remember the exact version anymore) spell correction in Calc is broken. The problem is that a right-click on a red underlined word does not open the spell checkers context menu anymore which provides proposals for correction. 

Steps to reproduce:

- Open the attached spreadsheet
- Right-click on the red underlined word "Huose"

Result: The cell standard context menu opens instead of the spell checker context menu.

At the moment I use and reproduce the bug with:
Version: 5.1.4.2
Build-ID: f99d75f39f1c57ebdd7ffc5f42867c12031db97a
CPU-Threads: 8; BS-Version: Windows 6.1; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE)




According to...
https://ask.libreoffice.org/en/question/42941/after-upgrading-to-version-4272-right-clicking-on-a-word-with-red-underline-doesnt-work-anymore-what-to-do-to-get-it-back/

the bug is present at least since:
Version: 4.2.7.2 Build ID: 933c0aa564ec4f8883ed5732c866db48dca4dac5

while the bug is _not_ present in:
Apache OpenOffice version 4.1.1
Comment 1 Cor Nouws 2016-07-12 19:20:14 UTC
Thanks for reporting.

I confirm this in Version: 5.3.0.0.alpha0+
Build ID: a4d40892b78070c9e54e0c8a30ed20d3395e68cd
CPU Threads: 2; OS Version: Linux 4.4; UI Render: default; 
TinderBox: Linux-rpm_deb-x86@71-TDF, Branch:master, Time: 2016-07-11_06:25:24
Locale: nl-NL (nl_NL.UTF-8); Calc: group

some combined clicking (double click right, pause, double click right again, e.g..) does show the menu
Comment 2 Caolán McNamara 2016-07-13 15:18:44 UTC
I think from bibisecting this is in the a48d76c65cdcbedaabc562bf8d4d0a2e81a1329d..7f5494f3c4bf14209a119c6b21c02e10075503ae range
Comment 3 Caolán McNamara 2016-07-13 15:58:38 UTC
I'd guess that 73f0b3bd5553c5d023d0a1dbfdc00836e2937961 was the regression commit and 9705fbc1119da91e73c00a2ec848565929eeb483 a fix for similar sounding problems
Comment 4 Commit Notification 2016-07-13 17:04:38 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=71ab1ee978a6da8edeabc7c65e9a34e679ec8e43

tdf#100880 editeng spellchecking doesn't work sometimes...

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Cor Nouws 2016-07-14 09:19:44 UTC
thanks!
Comment 6 Commit Notification 2016-07-15 12:58:52 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=21770181089cdd4c42c5ef810c49439e7daede30&h=libreoffice-5-2

tdf#100880 editeng spellchecking doesn't work sometimes...

It will be available in 5.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.