tdf#100880 editeng spellchecking doesn't work sometimes...

believe to be a regression from

commit 73f0b3bd5553c5d023d0a1dbfdc00836e2937961
Author: Matteo Casalin <matteo.casalin@yahoo.com>
Date:   Sat Dec 28 13:37:26 2013 +0100

    xub_StrLen to sal_Int32 + some const

and lets fix it the same way

commit 9705fbc1119da91e73c00a2ec848565929eeb483
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Sun Mar 2 12:19:16 2014 -0600

    Fix editeng missing spellchecking redline on load

(probably) fixed some other regression caused by that

Change-Id: I52775aff50dcc634fd2f08eb685cc4ad9850c82c